--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
