--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.22.0",
+    "streamifier": "^0.1.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
