--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "prod:migrate": "npx prisma migrate deploy",
     "prod:generate": "npx prisma generate",
     "prod:seed": "npx prisma db seed",
-    "prod:prisma": "npm run prod:migrate && npm run prod:generate && npm prod:seed",
+    "prod:prisma": "npm run prod:migrate && npm run prod:generate && npm run prod:seed",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
