--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-markdown": "^9.0.1",
     "react-mde": "^11.5.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
