--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-markdown": "^9.0.1",
-    "react-mde": "^11.5.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "zustand": "^5.0.2"
